# rulang

./: .coverage  .gitignore  CHANGELOG.md  README.md  main.py  package-lock.json  package.json  pyproject.toml
.cursor/plans/: business_rules_dsl_579b01b0.plan.md
.github/workflows/: ci.yml  release-typescript.yml  release.yml
docs/: grammar-reference.md  semantic-parity-audit.md  semantic-parity-exclusions.json  semantic-parity-plan.md
docs/proposals/: 01-public-ast.md  02-builder-primitives.md  03-canonical-formatter.md  04-validation-framework.md  05-conflict-detection.md  06-scope-resolution-deferred.md  07-grammar-reference.md  08-dry-run-diff.md  README.md
python/: README.md  pyproject.toml
python/tests/: test_api_integration.py  test_ast.py  test_builders.py  test_conflicts.py  (+9 more)
scripts/: generate_grammar_reference.mjs  generate_parsers.sh  patch_antlr_typescript_imports.mjs
spec/: README.md
tests/: test_builtin_functions.py  test_dependency_graph.py  test_dependency_graph_expanded.py  test_engine.py  test_engine_edge_cases.py  test_engine_expanded.py  test_existence_operators.py  test_feature_integration.py  test_implicit_entity.py  test_integration.py  test_list_operators.py  test_null_safe.py  test_parser.py  test_parser_edge_cases.py  test_parser_expanded.py  test_path_resolver.py  test_path_resolver_edge_cases.py  test_readme_examples.py  test_string_operators.py  test_visitor.py  test_visitor_edge_cases.py  test_visitor_expanded.py  test_workflows.py  test_workflows_expanded.py
typescript/: README.md  eslint.config.mjs  package.json  tsconfig.json
(+74 files in other folders)
