[project]
name = "rule-interpreter"
version = "0.0.1"
description = "A lightweight DSL for business rules with dependency analysis"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "antlr4-python3-runtime>=4.13.2",
]

[project.optional-dependencies]
dev = [
    "antlr4-tools>=0.2.2",
    "pytest>=9.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rule_interpreter"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
